[gd_scene load_steps=33 format=2]

[ext_resource path="res://Sprite/Ghost/GhostH3/ghostK_6.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Ghost/GhostH3/ghostK_3.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Ghost/GhostH3/ghostK_4.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Ghost/GhostH3/ghostK_2.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Ghost/GhostH3/ghostK_5.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Ghost/GhostH3/ghostK_1.png" type="Texture" id=6]
[ext_resource path="res://script/ghost/GhostK.gd" type="Script" id=7]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX015.png" type="Texture" id=8]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX001.png" type="Texture" id=9]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX007.png" type="Texture" id=10]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX010.png" type="Texture" id=11]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX011.png" type="Texture" id=12]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX006.png" type="Texture" id=13]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX008.png" type="Texture" id=14]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX002.png" type="Texture" id=15]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX003.png" type="Texture" id=16]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX004.png" type="Texture" id=17]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX005.png" type="Texture" id=18]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX009.png" type="Texture" id=19]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX012.png" type="Texture" id=20]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX013.png" type="Texture" id=21]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX014.png" type="Texture" id=22]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX001_03.png" type="Texture" id=23]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX001_01.png" type="Texture" id=24]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX001_04.png" type="Texture" id=25]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX001_05.png" type="Texture" id=26]
[ext_resource path="res://Sprite/effect/ghost3_ef/FX001_02.png" type="Texture" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 25 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "ATK",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 68.1175

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GhostK" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "ATK"
frame = 2
speed_scale = 2.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="effect" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 14
speed_scale = 2.0

[node name="AnimatedSprite2" type="AnimatedSprite" parent="effect"]
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
frame = 4
speed_scale = 2.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="effect" to="." method="_on_effect_animation_finished"]
[connection signal="animation_finished" from="effect/AnimatedSprite2" to="." method="_on_AnimatedSprite2_animation_finished"]
